--- a/contest/base/templates/base/home.html
+++ b/contest/base/templates/base/home.html
@@ -39,8 +39,10 @@
             {% if c.host != null %}
                 <h3> <a href="{% url 'compinfo' c.id %}">{{ c.title }}</a> </h3>
                 <p>created by {{ c.host.username }}</p>
-                <a href="{% url 'update-comp' c.id %}">edit </a> &nbsp;&nbsp;&nbsp;
-                <a href="{% url 'delete' c.id %}">delete</a>
+                {% if request.user == c.host %}
+                    <a href="{% url 'update-comp' c.id %}">edit </a> &nbsp;&nbsp;&nbsp;
+                    <a href="{% url 'delete' c.id %}">delete</a>
+                {% endif %}
                 <hr>
                 {% endif %}
             {% endfor %}
