--- a/contest/base/templates/base/home.html
+++ b/contest/base/templates/base/home.html
@@ -36,15 +36,14 @@
         <div class="room_container">
             <p>{{ cc }} competitions are available</p><br>
             {% for c in competitions %}
-            {% if c.host != null %}
-                <h3> <a href="{% url 'compinfo' c.id %}">{{ c.title }}</a> </h3>
-                <p>created by {{ c.host.username }}</p>
-                {% if request.user == c.host %}
+
+            <h3> <a href="{% url 'compinfo' c.id %}">{{ c.title }}</a> </h3>
+            <p>created by <a href="{% url 'user_profile' c.host.id %}">{{ c.host.username }}</a></p>
+            {% if request.user == c.host %}
                     <a href="{% url 'update-comp' c.id %}">edit </a> &nbsp;&nbsp;&nbsp;
                     <a href="{% url 'delete' c.id %}">delete</a>
-                {% endif %}
-                <hr>
-                {% endif %}
+            {% endif %}
+            <hr>
             {% endfor %}
         </div>
     
