--- a/contest/base/templates/base/login_register.html
+++ b/contest/base/templates/base/login_register.html
@@ -5,10 +5,10 @@
         <form action="" method="POST">
             {% csrf_token %}
             <label for="username">Username</label>
-            <input type="text" placeholder="username" type="text">
+            <input type="text" placeholder="username" name="username" type="text">
 
             <label for="password">Password</label>
-            <input type="text" placeholder="password" type="password">
+            <input type="text" placeholder="password" name="password" type="password">
 
             <input type="submit" value="login">
         </form>
