--- a/contest/base/templates/base/room.html
+++ b/contest/base/templates/base/room.html
@@ -7,10 +7,32 @@
 <h2>{{ competition.title }}</h2>
 <p>{{ competition.description }}</p>
 
-{% for c in comments %}
-    <p>
-        <h5>@{{ c.user.username }}</h5>
-        {{ c.body }}
-    </p>
-    <hr>
-{% endfor %}
+<div class="comment-container">
+    <form action="" method="POST">
+        {% csrf_token %}
+
+        <input type="text" name="body">
+        <input type="submit" value="Comment">
+    </form>
+</div>
+
+{% if comment_count != 0 %}
+    <h3>Comment Section</h3>
+
+    {% for c in comments %}
+        <small>
+            {{ c.created | timesince }} <br>
+            @{{ c.user.username }}
+        </small><br>
+
+        <p>
+            {{ c.body }}
+        </p>
+
+        {% if request.user == c.user %}
+            <a href="{% url 'delete_comment' c.id %}">delete comment</a>
+        {% endif %}
+
+        <hr>
+    {% endfor %}
+{% endif %}
