--- a/contest/base/templates/base/home.html
+++ b/contest/base/templates/base/home.html
@@ -2,13 +2,23 @@
 {% block content %}
 
 <style>
-    .main_container{
+    .main_container {
         display: grid;
         grid-template-columns: 1fr 3fr;
     }
 
-    .container {
-        margin-left: 10%;
+    .container{
+        display: grid;
+        grid-template-columns: 1fr 2fr 1fr;
+    }
+
+    .room_container {
+        margin-left: 0%;
+        margin-right: 5%;
+    }
+
+    .recent-act-container {
+        margin-right: 10%;
     }
 
 </style>
@@ -17,10 +27,7 @@
     <div class="search_bar">
         <h2>Browse Courses</h2>
         <hr>
-        {% for t in topic %}
-            <a href="{% url 'home' %}?q={{t.name}}">{{ t.name }}</a>
-            <br><br>
-        {% endfor %}
+        {% include 'base/topics.html' %}
     </div>
     
     <div class="container">
@@ -34,17 +41,13 @@
         </div>
     
         <div class="room_container">
-            <p>{{ cc }} competitions are available</p><br>
-            {% for c in competitions %}
+            {% include 'base/feed.html' %}
+        </div>
 
-            <h3> <a href="{% url 'compinfo' c.id %}">{{ c.title }}</a> </h3>
-            <p>created by <a href="{% url 'user_profile' c.host.id %}">{{ c.host.username }}</a></p>
-            {% if request.user == c.host %}
-                    <a href="{% url 'update-comp' c.id %}">edit </a> &nbsp;&nbsp;&nbsp;
-                    <a href="{% url 'delete' c.id %}">delete</a>
-            {% endif %}
-            <hr>
-            {% endfor %}
+        <div class="recent-act-container">
+
+            {% include 'base/activities.html' %}
+
         </div>
     
     </div>
