--- a/contest/base/templates/base/delete_comment.html
+++ b/contest/base/templates/base/delete_comment.html
@@ -1,8 +1,10 @@
-{% include 'navbar.html' %}
+{% extends 'main.html' %}
 
+{% block content %}
 <form action="" method="POST">
     <h4>Are you sure you wanna delete {{ comment.body }}?</h4>
     {% csrf_token %}
     <a href="{{ request.META.HTTP_REFERER }}">Don't delete</a>
     <input type="submit" value="Delete!">
 </form>
+{% endblock %}
