--- a/contest/base/templates/base/room.html
+++ b/contest/base/templates/base/room.html
@@ -1,8 +1,6 @@
-{% include 'navbar.html' %}
+{% extends 'main.html' %}
 
 {% block content %}
-
-{% endblock %}
 
 <style>
     .main-container {
@@ -67,3 +65,4 @@
 
     </div>
 </div>
+{% endblock %}
