--- a/contest/base/templates/base/competition_form.html
+++ b/contest/base/templates/base/competition_form.html
@@ -1,5 +1,5 @@
-{% include 'navbar.html' %}
-
+{% extends 'main.html' %}
+{% block content %}
 <div class="container">
     <form method="POST">
         {% csrf_token %}
@@ -7,3 +7,5 @@
         <input type="submit" value="submit">
     </form>
 </div>
+
+{% endblock %}
