--- a/contest/base/templates/base/user_profile.html
+++ b/contest/base/templates/base/user_profile.html
@@ -1,4 +1,6 @@
-{% include 'navbar.html' %}
+{% extends 'main.html' %}
+
+{% block content %}
 
 <style>
     .body-container {
@@ -49,3 +51,4 @@
     </div>
 </div>
 
+{% endblock %}
